@@ -633,12 +633,12 @@ Memory allocation (code space): 9
 ------------------------------------------------------------------
 
 /[^\xaa]/8BM
-Memory allocation (code space): 40
+Memory allocation (code space): 10
 ------------------------------------------------------------------
-  0  36 Bra
-  3     [\x00-\xa9\xab-\xff] (neg)
- 36  36 Ket
- 39     End
+  0   6 Bra
+  3     [^\x{aa}]
+  6   6 Ket
+  9     End
 ------------------------------------------------------------------
 
 /[^\d]/8WB
