@@ -535,7 +535,7 @@ No need char
 /[^\xff]/8DZ
 ------------------------------------------------------------------
         Bra
-        [^\x{ff}]
+        [^\xff]
         Ket
         End
 ------------------------------------------------------------------
@@ -798,7 +798,7 @@ No set of starting bytes
 /[^\x{c4}]/8DZ
 ------------------------------------------------------------------
         Bra
-        [^\x{c4}]
+        [^\xc4]
         Ket
         End
 ------------------------------------------------------------------
